# CarbonAware_FinOps_Local

./: .claude-guidelines  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ACADEMIC_ENHANCEMENTS_COMPLETE.md  API_INTEGRATION_EXPLAINED.md  BACHELOR_THESIS_ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  KNOWN_ISSUES.md  LICENSE  MAKEFILE_GUIDE.md  Makefile  Makefile.backup  OPTIMIZATION_REPORT.md  PROJECT_CLEANUP_SUMMARY.md  README.md  UNIVERSAL_DEPLOYMENT.md  builder.config.json  deploy_universal.sh  fix_datetime_issue.py  improved_thesis_dashboard_DEPRECATED.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements-frozen.txt  requirements.txt  run.py  run_clean_dashboard.py  run_dashboard.py  run_streamlit.py  setup.py  streamlit_main.py  test_academic_enhancements.py  test_power_service.py
automation_scripts/: ensure_aws_session.sh
config/: aws_config.yaml  scheduling_rules.yaml
dashboard/: dashboard_main.py
dashboard/api_clients/: __init__.py  unified_api_client.py
dashboard/assets/: modern-thesis-styles.css
dashboard/components/: academic_disclaimers.py  components.py
dashboard/tabs/: carbon_tab.py  infrastructure_tab.py  overview_tab.py  research_methods_tab.py  thesis_validation_tab.py
dashboard/utils/: data_processing.py  health_dashboard.py
data/baseline/: baseline_data_summary.json
docs/: CLEAN_ARCHITECTURE_SUMMARY.md  FUTURE_WORK.md  README.md  api-optimization-strategy.md  calculations.md  case-studies.md  cloudtrail-methodology.md  competitive-analysis.md  conservative-revision-summary.md  cost-explorer-analysis.md  dashboard-restructuring-september-2025.md  dashboard-user-guide.md  developer-handbook.md  development-guidelines.md  health-monitoring-guide.md  implementation-guide.md  implementation-summary.md  integration-testing-plan.md  literature-integration.md  literature-review-framework.md  literature-review-matrix.md  literature_review_framework.md  makefile-guide.md  market-analysis.md  methodological-flaws-correction.md  new-dashboard-specification.md  project-limitations-analysis.md  project-summary.md  project-validation-report.md  references.md  scientific-improvements-september-2025.md  system-architecture.md  test-instances-specification.md  thesis-documentation.md  thesis-methodology.md  thesis-risk-mitigation-checklist.md  user-guide.md  validation-results-summary.md  validation-results.md
docs/api/: API_DOCUMENTATION.md  CACHE_STRATEGY.md
docs/api_limitations/: AWS_API_RESEARCH.md
docs/architecture/: ARCHITECTURE.md  README.md  naming-conventions.md  system-architecture.md
docs/methodology/: COST_ALLOCATION_METHODOLOGY.md  README.md  calculations.md  cloudtrail-methodology.md  co2_calculation_24h_precise.md  cost-explorer-analysis.md
docs/migration/: field-deprecation.md
docs/quality/: README.md  known-issues.md  test-coverage-report.md
docs/research/: README.md  future-work.md  literature-integration.md  market-analysis.md  thesis-documentation.md  validation-results.md
docs/thesis/: README.md  quick-reference.md
mockups/: thesis_validation_mockup.html
scripts/: collect_baseline.py  debug_cost_explorer.py  deploy.sh  optimize_project.py  setup_environment.sh  setup_secrets.py
src/: COMPREHENSIVE_CODE_ANALYSIS.md  __init__.py  api_client.py  app.py  cache_utils.py  calculation_utils.py  cli.py  cloudtrail_tracker.py  constants.py  data_processor.py  error_utils.py  health_monitor.py  models.py  page_utils.py  pages.py  performance_utils.py  startup_validation.py
terraform/: main.tf  variables.tf
tests/: __init__.py  demo_api_interaction.py  test_api_clients.py  test_carbon.py  test_carbon_api.py  test_cost.py  test_data_processing.py  test_health_checks.py  test_power_service.py  test_smoke.py  test_unified_api.py
(+180 files in other folders)
